--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,21 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="jsfrfcc" version="3.0">
-
-	<display-name>jsfrf1.0</display-name>
+	<display-name>jsfrfcc1.0</display-name>
 	<context-param>
 		<param-name>javax.faces.PROJECT_STAGE</param-name>
 		<param-value>Development</param-value>
-	</context-param>
-
-	<context-param>
-		<param-name>org.richfaces.resourceMapping.enabled</param-name>
-		<param-value>true</param-value>
-	</context-param>
-
-	<context-param>
-		<param-name>org.richfaces.resourceMapping.packedStages</param-name>
-		<param-value>All</param-value>
 	</context-param>
 
 	<context-param>
